--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "todo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/server/server.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec \"npm test\""
+    "test-watch": "nodemon --exec \"npm test\"",
+    "start": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
